kubernetes/kubernetes-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: css-site-deployment
  labels:
    app: css-site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: css-site
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: css-site
    spec:
      containers:
      - name: css-site
        image: satheesh45/templatemo_611_maison_doree
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
