kubernetes/kubernetes-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: css-site-service
spec:
  type: NodePort
  selector:
    app: css-site
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
